# choice

./: .gitignore  .ocamlinit  .travis.yml  META  Makefile  README.md  _tags  choice.ml  choice.mli  choice.mllib  choice.opam  dune-project  index.md  opam
.github/workflows/: gh-pages.yml  main.yml
0.4/: index.html
0.4/choice/: index.html
0.4/choice/Choice/: index.html
0.4/choice/Choice/Array/: index.html
0.4/choice/Choice/Enum/: index.html
0.4/choice/Choice/List/: index.html
dev/choice/: index.html
dev/choice/Choice/: index.html
dev/choice/Choice/Array/: index.html
dev/choice/Choice/Enum/: index.html
dev/choice/Choice/List/: index.html
src/: Choice.ml  Choice.mli  choice.ml  choice.mli  dune
tests/: bench.ml  dune  run_tests.ml  test_choice.ml
