opam-version: "2.0"
authors: "Simon Cruanes <simon.cruanes.2007@m4x.org>"
name: "choice"
synopsis: "Choice monad, for easy backtracking"
version: "0.3"
maintainer: "simon.cruanes.2007@m4x.org"
homepage: "https://github.com/c-cube/choice/"
bug-reports: "https://github.com/c-cube/choice/issues"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" { >= "1.1" }
  "ocaml" { >= "4.03.0" }
  "seq"
  "ounit" {with-test}
  "gen" {with-test}
  "odoc" {with-doc}
]
dev-repo: "git+https://github.com/c-cube/choice.git"
